fix date input on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -168,4 +168,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   .task-card {
     width: 90%;
   }
+  input[type="date"] {
+  color-scheme: light;
+}
 }
